# OpenLiDARMap

./: .clang-format  .gitignore  CITATION.cff  Dockerfile  Dockerfile.dev  README.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
cpp/: CMakeLists.txt
cpp/apps/: main.cpp
cpp/config/: ceres_config.hpp  config.hpp  kernel_config.hpp  pipeline_config.hpp  preprocess_config.hpp  registration_config.hpp  types.hpp
cpp/core/: pose_factor_abs.hpp  pose_factor_rel.hpp  pose_graph.cpp  pose_graph.hpp  prediction.cpp  prediction.hpp  preprocess.cpp  preprocess.hpp  registration.cpp  registration.hpp
cpp/io/: kitti_loader.cpp  kitti_loader.hpp  loader_factory.cpp  loader_factory.hpp  map_loader.cpp  map_loader.hpp  point_cloud_loader.hpp  point_cloud_saver.cpp  point_cloud_saver.hpp
cpp/io/format/: kitti.cpp  kitti.hpp  nuscenes.cpp  nuscenes.hpp  pcd.cpp  pcd.hpp  ply.cpp  ply.hpp  xyz.cpp  xyz.hpp
cpp/pipeline/: openlidarmap.cpp  openlidarmap.hpp
cpp/utils/: file_utils.cpp  file_utils.hpp  helpers.cpp  helpers.hpp  pose_utils.cpp  pose_utils.hpp
docker/: build_docker.sh  run_docker.sh
python/: CMakeLists.txt  pyproject.toml  test_pipeline.py
python/pybind/: openlidarmap_pybind.cpp
